New in spot 2.11.3.dev  (not yet released)

  Python:

  - spot.acd() no longer depends on jQuery for interactivity.

New in spot 2.11.3  (2022-12-09)

  Bug fixes:

  - Automata-based implication checks, used to simplify formulas were
    slower than necessary because the translator was configured to
    favor determinism unnecessarily.  (Issue #521.)

  - Automata-based implication checks for f&g and f|g could be
    very slow when those n-ary operator had two many arguments.
    They have been limited to 16 operands, but this value can be changed
    with option -x tls-max-ops=N.  (Issue #521 too.)

  - Running ltl_to_tgba_fm() with an output_aborter (which is done
    during automata-based implication checks) would leak memory on
    abort.

  - configure --with-pythondir should also redefine pyexecdir,
    otherwise, libraries get installed in the wrong place on Debian.
    (Issue #512.)

  - The HOA parser used to silently declare unused and undefined states
    (e.g., when the State: header declare many more states than the body
    of the file).  It now warns about those.

  - 'autfilt -c ...' should display a match count even in presence of
    parse errors.

  - Calling solve_parity_game() multiple times on the same automaton
    used to append the new strategy to the existing one instead of
    overwriting it.

New in spot 2.11.2  (2022-10-26)

  Command-line tools:

  - The --stats specifications %s, %e, %t for printing the number of
    (reachable) states, edges, and transitions, learned to support
    options [r], [u], [a] to indicate if only reachable, unreachable,
    or all elements should be counted.

  Library:

  - spot::reduce_parity() now has a "layered" option to force all
    transition in the same parity layer to receive the same color;
    like acd_transform() would do.

  Bugs fixed:

  - Fix pkg-config files containing @LIBSPOT_PTHREAD@ (issue #520)
  - spot::relabel_bse() was incorrectly relabeling some dependent