@@ -1,5 +1,5 @@
 ## -*- coding: utf-8 -*-
-## Copyright (C) 2009-2022 Laboratoire de Recherche et Développement
+## Copyright (C) 2009-2023 Laboratoire de Recherche et Développement
 ## de l'Epita (LRDE).
 ## Copyright (C) 2003-2006 Laboratoire d'Informatique de Paris 6
 ## (LIP6), département Systèmes Répartis Coopératifs (SRC), Université
@@ -223,6 +223,7 @@ TESTS_misc = \
 TESTS_twa = \
   core/385.test \
   core/521.test \
+  core/522.test \
   core/acc.test \
   core/acc2.test \
   core/bdddict.test \
